Fix Brotli warnings on Windows

Brotli files have some warnings that kill the Windows compiler. This
change modifies the Brotli source files to pass the Windows compile.

BUG=612349

Review-Url: https://codereview.chromium.org/1981333002
Cr-Commit-Position: refs/heads/master@{#394397}

Former-commit-id: b8adfa4cfb3e1e06b473428a79090e92edf4ab8d